--- a/react-app/src/components/Navbar/Navbar.module.css
+++ b/react-app/src/components/Navbar/Navbar.module.css
@@ -71,3 +71,10 @@
         z-index: 1;
     }
 }
+
+@media screen and (min-width: 831px) {
+    .menuBtn {
+        display: none;
+        cursor: none;
+    }
+}
